Fix reasons alignment issues

--- a/css/reasonsBubbleChart.css
+++ b/css/reasonsBubbleChart.css
@@ -1,7 +1,7 @@
 /* Code from https://www.w3schools.com/howto/howto_css_switch.asp */
 /* The switch - the box around the slider */
 .switch {
-    position: absolute;
+    position: relative;
     width: 180px;
     height: 30px;
     top: 15%;
